# A402

./: AGENTS.md  Anchor.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md  grant-application-draft.md  package.json
a402-v1/: .gitignore  README.md
a402-v1/Common/HostVM/: host_vm_mediator.cpp  host_vm_mediator.h
a402-v1/Common/channel/: channel.c  channel.h
a402-v1/Common/crypto/: adapter_signature.c  adapter_signature.h  commitment.c  commitment.h  encryption.c  encryption.h  key_exchange.c  key_exchange.h
a402-v1/Common/mixer/: receipt.c  receipt.h
a402-v1/Common/network/: message_serializer.cpp  message_serializer.h  network_server.cpp  network_server.h
a402-v1/Common/protocol/: a402_protocol.h  messages.h  x402_protocol.c  x402_protocol.h
a402-v1/Common/storage/: response_storage.c  response_storage.h
a402-v1/Common/utils/: logger.c  logger.h  timelock.c  timelock.h
a402-v1/Common/vault/: vault.c  vault.h
a402-v1/M-TEE/: Makefile
a402-v1/M-TEE/App/: App.cpp
a402-v1/M-TEE/GuestVM/: a402_mtee.c  mtee_guest.cpp  mtee_guest.h  platform_sev.c  platform_sev.h  sev_vm_communication.h
a402-v1/M-TEE/HostVM/: host_vm_app.cpp  host_vm_app.h  mtee_host_app  mtee_network.cpp  mtee_network.h
a402-v1/U-TEE/: Makefile
a402-v1/U-TEE/App/: App.cpp  App.h
a402-v1/U-TEE/GuestVM/: a402_utee.c  platform_sev.c  platform_sev.h  sev_vm_communication.c  sev_vm_communication.h  (+3 more)
a402-v1/benchmark/: a402_protocol_integrated.cpp  a402_wrapper.cpp  a402_wrapper.h  benchmark_framework.h  run_multi_utee_test.sh  run_scalability_test.sh  scalability_results_v2.json  test_multi_utee_coordination.cpp  test_utee_mtee_distribution.cpp
a402-v1/contracts/: PaymentChannel.sol
a402-v1/schnorr-verify/: hardhat.config.js
a402-v1/tests/: Makefile  run_tests.sh  test_client  test_client.cpp  test_simple  test_simple.cpp
chains/bitcoin/: a402_vault_policy.md
chains/ethereum/: .gitignore  README.md  foundry.toml
client/: Cargo.toml
client/src/: atomic.rs  error.rs  keys.rs  lib.rs  sigs.rs  sp_http.rs
docs/: a402-multichain-adapters.md  a402-nitro-deployment.md  a402-sev-snp-deployment.md  a402-solana-design.md  a402-svm-v1-protocol.md  demo-side-by-side.md  devnet-setup.md  nitro-devnet-deploy.md  quickstart.md  redeploy-devnet.md
enclave/: Cargo.toml
enclave/src/: adaptor_sig.rs  admin_auth.rs  asc_manager.rs  attestation.rs  audit.rs  batch.rs  btc_deposit_detector.rs  btc_ledger.rs  chain_adapter.rs  deposit_detector.rs  handlers.rs  handlers_client.rs  handlers_client.rs.bak  handlers_evm.rs  kms_bootstrap.rs  main.rs  multichain_settlement.rs  provider_attestation.rs  raft_setup.rs  snapshot.rs  state.rs  wal.rs
infra/nitro/: README.md
infra/sev-snp/: README.md
middleware/: README.md  package.json
middleware/src/: a402.ts  facilitator.ts  index.ts  middleware.ts  types.ts
raft/: Cargo.toml
raft/src/: committee.rs  http_net.rs  lib.rs  network.rs  store.rs  types.rs
raft/tests/: four_node_convergence.rs  four_node_http_convergence.rs
scripts/btc/: start-regtest.sh
scripts/demo/: a402-agent-demo.js  a402-buyer.js  a402-seller.js  common.js  compare.js  direct-x402-demo.js  four-way-common.js  public-seller-host.js  solana-kit.js  x402-official-buyer.js  x402-official-seller.js
scripts/devnet/: bootstrap.js  common.js  smoke.js  start.js
scripts/evm/: bootstrap.sh  install-deps.sh  start-anvil.sh  stop-anvil.sh
scripts/nitro/: common.js  e2e.js  prepare.js  provision.js  register-providers.js
sdk/: README.md  package.json
sdk/src/: a402.ts  attestation.ts  audit.ts  client.ts  crypto.ts  index.ts  types.ts
service_provider/: Cargo.toml
service_provider/src/: handlers.rs  keys.rs  main.rs  registry.rs  service.rs
service_provider/tests/: anvil_paper_flow.rs
shared/: Cargo.toml
shared/src/: adaptor_sig_secp.rs  btc_asc_channel.rs  btc_asc_script.rs  btc_chain.rs  btc_tx.rs  evm_chain.rs  evm_channel_store.rs  evm_tx.rs  lib.rs
tests/: a402_interface.ts  attestation_sdk.ts  audit_tool.ts  enclave_api.ts  enclave_surfpool_e2e.ts  live_transport.ts  middleware_raw_body.ts
tests/fixtures/: adaptor_sig_secp_fixture.json  eip1559_fixture.json  evm_calldata_fixture.json
watchtower/src/: challenger.rs  main.rs
(+49 files in other folders)
